# Dependency-Reduction-Unit-Framework

./: .gitignore  .gitmodules  README.md  selfTest.sh
GDBManipulator/: CMakeLists.txt  Readme.md
GDBManipulator/src/: ArgumentCallBackFunctions.cpp  ArgumentCallBackFunctions.h  CMakeLists.txt  FeatureCheck.cpp  FeatureCheck.h  LogFileFilter.h  Utils.cpp  Utils.h  Version.h  eUnitVersionsChecker.cpp  eUnitVersionsChecker.h  main.cpp  main.h
GDBManipulator/src/comChain/: CMakeLists.txt  ComArmNoneEabiGdb.cpp  ComArmNoneEabiGdb.h  ComChain.cpp  ComChain.h  ComGnuDebugger.cpp  ComGnuDebugger.h
GDBManipulator/src/comChain/decoder/: CMakeLists.txt  DecodeState.cpp  DecodeState.h  FrameDecoder.cpp  FrameDecoder.h  GdbClient.cpp  GdbClient.h  GdbDecoder.cpp  GdbDecoder.h  GdbErrorStream.cpp  GdbErrorStream.h  GdbInterface.cpp  GdbInterface.h  GdbOutputStream.cpp  GdbOutputStream.h  GdbStreams.h  NameLessPipe.h  NameLessPipeLinux.cpp  NameLessPipeWindows.cpp  StopFrame.h  ValueDecoder.cpp  ValueDecoder.h
GDBManipulator/src/runModes/: AbstractRunMode.h  CMakeLists.txt  FlashMode.cpp  FlashMode.h  RunMode.cpp  RunMode.h  TestMode.cpp  TestMode.h
GDBManipulator/src/tester/: CMakeLists.txt  MemoryDump.cpp  MemoryDump.h  TargetMock.cpp  TargetMock.h  TestAnalyser.cpp  TestAnalyser.h  TestStatistic.cpp  TestStatistic.h  XmlGenerator.cpp  XmlGenerator.h
GDBManipulator/tests/: CMakeLists.txt  TEST_AdvancedConfigurationTest.cpp  TEST_ArgvParserTest.cpp  TEST_ComChainFunctionTest.cpp  TEST_ConfigReaderTest.cpp  TEST_DefinedNumberOfArgs.cpp  TEST_ExampleTest.cpp  TEST_FeatureChecker.cpp  TEST_Gdb_messages.cpp  TEST_LambdaTest.cpp  TEST_MockTests.cpp  TEST_NameLessPipeTest.cpp  TEST_TestAnalyserTest.cpp  TEST_TestChain.h  TEST_TestInit.cpp  TEST_TestTestStatistic.cpp  TEST_UtilsTest.cpp  TEST_XmlGeneratorTest.cpp
awk/: Readme.md  exampleFileToParse.c  generateInvokeAll.awk  parseSingleFile.awk
doc/pic/: note.txt
eUnit/: Readme.md  testExample.c
eUnit/eUnit/: eUnit.c  eUnit.h
eUnit/eUnit/eUnitSelfTest/: .gitignore  Makefile  Readme.md  linux.mk  main.c
eUnit/eUnit/eUnitSelfTest/BistMode/: Makefile  Readme.md  TOOL_crc.c  TOOL_crc.h  isOutput  main.c  shouldOutput  test.sh  testObjekt.c
eUnit/eUnit/eUnitSelfTest/Host/: expectNoTestMode  expectTestMode  main.c  resultTestMode  run.sh  testObjekt.c  testObjekt.h
eUnit/eUnit/eUnitSelfTest/Host/tests/: tests.cpp  (+2 more)
eUnit/eUnit/eUnitSelfTest/findCtest/: Makefile  linux.mk  main.c
eUnit/eUnit/eUnitSelfTest/findGtest/: Makefile  linux.mk  main.cpp
eUnit/eUnit/eUnitSelfTest/src/: JustSuccess.c  TestLines.c  byteComp.c  cleanBuffer.c  justResults.c  justTestNames.c  main.h  optOutTests.c  shallNotFail.c
examples/: .gitignore
examples/BuildInSefTestMode/: Makefile  parsTests.sh
examples/BuildInSefTestMode/src/: main.c
examples/BuildInSefTestMode/src/tests/: test_crc.cpp
examples/BuildInSefTestMode/src/toTest/: TOOL_crc.c  TOOL_crc.h  testObjekt.h
examples/simpleHostBasedExample/: .gitignore  Makefile  Readme.md  parsTests.sh
examples/simpleHostBasedExample/src/: main.c
examples/useCallBackFunktions/: Makefile
examples/useCallBackFunktions/src/: main.c
(+13 files in other folders)
